# libACA

./: .gitignore  CMakeLists.txt  LICENSE  README.md  citation.cff
.github/codeql/: codeql-config.yml
.github/workflows/: cmake.yml  codeql-analysis.yml  documentation.yml
cmake.modules/: AddCppcheckTest.cmake  AddIncDirectories.cmake  AddSrcDirectories.cmake  FindCppcheck.cmake  Findcppcheck.cpp  SetOsLibs.cmake  SetOutputDir.cmake  SetPlatform.cmake
docs/: a00002.html  a00002.xhtml  a00002_a0ddf1224851353fc92bfbff6f499fa97_cgraph.map  a00002_a0ddf1224851353fc92bfbff6f499fa97_cgraph.md5  a00002_a2d0a5ce28a4b0030ec0353c6f7a0fd64_icgraph.map  a00002_a2d0a5ce28a4b0030ec0353c6f7a0fd64_icgraph.md5  a00002_source.html  a00002_source.xhtml  a00003.map  a00003.md5  a00005.html  a00005.js  a00005.xhtml  a00005_a0ddf1224851353fc92bfbff6f499fa97_cgraph.map  a00005_a0ddf1224851353fc92bfbff6f499fa97_cgraph.md5  a00005_a2d0a5ce28a4b0030ec0353c6f7a0fd64_icgraph.map  a00005_a2d0a5ce28a4b0030ec0353c6f7a0fd64_icgraph.md5  a00005_source.html  a00005_source.xhtml  a00006.map  a00006.md5  a00008.html  a00008.js  a00008.xhtml  a00008_a0ddf1224851353fc92bfbff6f499fa97_cgraph.map  a00008_a0ddf1224851353fc92bfbff6f499fa97_cgraph.md5  a00008_a2d0a5ce28a4b0030ec0353c6f7a0fd64_cgraph.md5  a00008_a2d0a5ce28a4b0030ec0353c6f7a0fd64_icgraph.map  a00008_a2d0a5ce28a4b0030ec0353c6f7a0fd64_icgraph.md5  a00008_source.html  a00008_source.xhtml  a00009.map  a00009.md5  a00011.html  a00011.js  a00011.xhtml  a00011_a0ddf1224851353fc92bfbff6f499fa97_cgraph.map  a00011_a0ddf1224851353fc92bfbff6f499fa97_cgraph.md5  a00011_a2d0a5ce28a4b0030ec0353c6f7a0fd64_icgraph.map  a00011_a2d0a5ce28a4b0030ec0353c6f7a0fd64_icgraph.md5  (+20061 more)
docs/html/: a00002.html  a00002.js  a00002.xhtml  a00002_a0ddf1224851353fc92bfbff6f499fa97_cgraph.map  a00002_a0ddf1224851353fc92bfbff6f499fa97_cgraph.md5  a00002_a2d0a5ce28a4b0030ec0353c6f7a0fd64_icgraph.md5  a00002_source.html  a00002_source.xhtml  a00003.map  a00003.md5  a00005.xhtml  a00005_source.xhtml  a00006.map  a00006.md5  a00008.xhtml  a00008_source.xhtml  a00009.map  a00009.md5  a00011.html  a00011.js  a00011.xhtml  a00011_a0ddf1224851353fc92bfbff6f499fa97_cgraph.map  a00011_a0ddf1224851353fc92bfbff6f499fa97_cgraph.md5  a00011_a2d0a5ce28a4b0030ec0353c6f7a0fd64_icgraph.map  a00011_a2d0a5ce28a4b0030ec0353c6f7a0fd64_icgraph.md5  a00011_source.html  a00011_source.xhtml  a00012.map  a00012.md5  a00013.md5  a00014.html  a00014.js  a00014.xhtml  a00014_a0ddf1224851353fc92bfbff6f499fa97_cgraph.map  a00014_a0ddf1224851353fc92bfbff6f499fa97_cgraph.md5  a00014_a2d0a5ce28a4b0030ec0353c6f7a0fd64_icgraph.map  a00014_source.html  a00014_source.xhtml  a00015.map  a00015.md5  (+15974 more)
docs/html/search/: all_0.js  all_1.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  (+135 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  (+139 more)
inc/: AcaAll.h  AudioFileIf.h  BeatHisto.h  Chord.h  ChordFromBlock.h  ClassifierBase.h  ErrorDef.h  Feature.h  FeatureFromBlock.h  Key.h  KeyFromChroma.h  Novelty.h  NoveltyFromBlock.h  Pitch.h  PitchFromBlock.h  Spectrogram.h  SubFingerprint.h  ToolBlockAudio.h  ToolCcf.h  ToolConversion.h  ToolFingerprint.h  ToolGammatone.h  ToolGmm.h  ToolGmmClassifier.h  ToolInstFreq.h  ToolLeaveOneOutCrossVal.h  ToolLowPass.h  ToolNmf.h  ToolPca.h  ToolPreProc.h  ToolResample.h  ToolSeqFeatureSel.h  ToolSimpleDtw.h  ToolSimpleKmeans.h  ToolSimpleKnn.h  ToolViterbi.h
inc/helper/: Fft.h  Filter.h  Matrix.h  RingBuffer.h  Synthesis.h  Util.h  Vector.h
src/: ACAConfig.h.in  AcaConfig.h.in  doxy.config.in
src/ACA/: AcaAll.cpp  BeatHisto.cpp  CMakeLists.txt  Chord.cpp  ChordFromBlock.cpp  Feature.cpp  FeatureFromBlock.cpp  Fft.cpp  Key.cpp  KeyFromChroma.cpp  Novelty.cpp  NoveltyFromBlock.cpp  Pitch.cpp  PitchFromBlock.cpp  Spectrogram.cpp  SubFingerprint.cpp  ToolBlockAudio.cpp  ToolCcf.cpp  ToolConversion.cpp  ToolFingerprint.cpp  ToolGammatone.cpp  ToolGmm.cpp  ToolGmmClassifier.cpp  ToolLeaveOneOutCrossVal.cpp  ToolNmf.cpp  ToolPca.cpp  ToolSeqFeatureSel.cpp  ToolSimpleDtw.cpp  ToolSimpleKmeans.cpp  ToolSimpleKnn.cpp  ToolViterbi.cpp
src/AudioFileIO/: AudioFile.cpp  AudioFile.h  AudioFileIf.cpp  CMakeLists.txt
src/ComputeBeatHisto/: CMakeLists.txt  ComputeBeatHisto.cpp
src/ComputeChords/: CMakeLists.txt  ComputeChords.cpp
src/ComputeFeature/: CMakeLists.txt  ComputeFeature.cpp
src/ComputeFingerprint/: CMakeLists.txt  ComputeFingerprint.cpp
src/ComputeKey/: CMakeLists.txt  ComputeKey.cpp
src/ComputeMelSpectrogram/: CMakeLists.txt  ComputeMelSpectrogram.cpp
src/ComputeNoveltyFunction/: CMakeLists.txt  ComputeNoveltyFunction.cpp
src/ComputePitch/: CMakeLists.txt  ComputePitch.cpp
src/ComputeSpectrogram/: CMakeLists.txt  ComputeSpectrogram.cpp
src/Tests/: MSVC-catch2-test.runsettings
src/Tests/TestData/: ref.pcm
src/Tests/TestExec/: CMakeLists.txt  Test.cpp
src/Tests/Tests/: Test_AudioIO.cpp  Test_BeatHisto.cpp  Test_Chords.cpp  Test_Dtw.cpp  Test_Features.cpp  Test_Fft.cpp  Test_Filter.cpp  Test_Key.cpp  Test_Matrix.cpp  Test_Novelty.cpp  Test_Pitch.cpp  Test_RingBuffer.cpp  Test_Spectrogram.cpp  Test_Tools.cpp
src/Tools/: CMakeLists.txt  ToolBlockAudio.cpp  ToolCcf.cpp  ToolConversion.cpp  ToolSimpleDtw.cpp
